tests/fsharpqa/Source/TypeProviders/RuntimeDesignTimeAssembly/Negative/MyTPDesignTimeHelper.fs
namespace MyTPDesignTimeHelper
type Class1() = 
    member this.X = "F#"

